[package]
name = "mssql_client"
version = "0.9.3-alpha.0"
authors = ["Dany Laporte <dany_laporte@hotmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4"
conn_str = { git = "https://github.com/danylaporte/conn_str.git" }
decimal = { git = "https://github.com/danylaporte/dec19x5.git", package = "dec19x5" }
futures = "0.1"
futures-state-stream = "0.1"
futures03 = { package = "futures", version = "0.3", features = ["compat"] }
tiberius = { git = "https://github.com/danylaporte/tiberius.git", branch = "flock" }
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = [ "v4" ] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros", "rt-core"] }
